fixed overflow-x

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
     min-height: 100vh;
     min-width: 100vw;
-    /* overflow: hidden; */
+    overflow-x: hidden;
     background-color: #000000;
 }
 
